--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,27 @@ header img {
   margin: 20px auto;
 }
 
-.container img {
+img {
   width: 40%;
   margin: 0 auto;
 }
 
-.container p {
+p {
   font-size: 12px;
   line-height: 1.6em;
+  padding: 10px;
 }
 
-.container .box-1 {
+.box-1 {
   background-color: #333;
   color: #fff;
+
+  /* BORDER */
+  /* border-right: 5px solid #ff0000;
+  border-left: 5px solid #ff0000;
+  border-top: 5px solid #ff0000;
+  border-bottom: 5px solid #ff0000; */
+
+  /* SAME AS ABOVE: */
+  border: 5px solid #ff0000;
 }
