--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* RESET */
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +16,23 @@ header {
 header img {
   width: 40%;
 }
+
+a {
+  text-decoration: none;
+  color: #ff0000;
+}
+
+a:hover {
+  color: #000;
+}
+
+a:active {
+  color: #008000;
+}
+
+/* a:visited {
+  
+} */
 
 .container {
   background-color: #f4f4f4;
@@ -46,6 +64,49 @@ p {
   border-top: 5px solid #ff0000;
   border-bottom: 5px solid #ff0000; */
 
-  /* SAME AS ABOVE: */
+  /* PREFERABLE TO USE SHORTHAND - SAME AS ABOVE: */
   border: 5px solid #ff0000;
+
+  /* SHORTHAND ALSO APPLIES TO MARGIN AND PADDING */
+
+  padding: 20px;
+  margin: 20px;
+}
+
+/* BOX 1 */
+.box-1 h1 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  /* font-style: italic; */
+  /* text-decoration: underline; */
+  text-transform: uppercase;
+  /* letter-spacing: 0.2em;
+  word-spacing: 1em; */
+}
+
+/* BOX 2 */
+.box-2 {
+  border: 3px dotted #000080;
+  padding: 20px;
+  margin: 20px 0;
+}
+
+.categories {
+  border: 1px solid #800080;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.categories h2 {
+  text-align: center;
+}
+
+.categories ul {
+  padding: 0;
+  list-style: none;
+}
+
+.categories li {
+  /* padding-bottom: 8px; */
+  border-bottom: 1px #333 dotted;
 }
