--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,16 @@ p {
   /* THE FOLLOWING IS INCLUDED IN THE RESET:  */
   /* box-sizing: border-box; */
 }
+
+/* PSEUDO ELEMENTS */
+.my-list li:first-child {
+  background: #ff0000;
+}
+
+.my-list li:last-child {
+  background: #000080;
+}
+
+.my-list li:nth-child(4) {
+  background: yellow;
+}
