--- a/css/style.css
+++ b/css/style.css
@@ -190,8 +190,14 @@ p {
 
 .my-list li:last-child {
   background: #000080;
+  color: #fff;
 }
 
 .my-list li:nth-child(4) {
-  background: yellow;
+  background: #ffff00;
+}
+
+.my-list li:nth-child(even) {
+  background: #000;
+  color: #fff;
 }
